fix google select language on mobiles

--- a/css/donut.css
+++ b/css/donut.css
@@ -734,7 +734,7 @@ header .search-bar {
   .dropdown-split-left.open .dropdown-menu li a{background-color: #000000; color: #ffffff !important; padding: 15px 10px;}
   .dropdown-split-left.open .dropdown-menu li a:hover, .dropdown-split-left.open .dropdown-menu li.active a{color: #ff7675 !important; background-color: #000000 !important;}
   /*.navbar-default .navbar-nav .open .dropdown-menu>.active>a, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover, .navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus*/
-
+  .goog-te-gadget-simple .goog-te-menu-value span {color: #FEFEFF !important}
   .main-nav li.active > a,
   .main-nav li > a:hover {
     color: #555;
